--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
 }
 
 .container {
-    height: 90vh;
-    width: 80%;
+    height: 100vh;
+    width: 90vw;
     margin: 0 auto;
     margin-top: 2%;
     background-color: whitesmoke;
