--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,16 @@ h1 {
 .bar:hover {
     fill: white;
 }
+
+.tooltip {	
+    position: absolute;			
+    text-align: center;			
+    width: 70px;					
+    height: 30px;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
